<resources>
    <string name="app_name">Capture the Campus</string>
    <string name="map_image">mapImage</string>
    <string name="alt_background">background</string>
    <string name="user_input">Your name</string>
    <string name="select_player">Select Player</string>

    <!-- Headline -->
    <string name="headline_one">Capture</string>
    <string name="headline_two">the</string>
    <string name="headline_three">Campus</string>
    <!-- Buttons -->
    <string name="start_button">Start</string>
    <string name="create_button">Create Game</string>
    <string name="cancel_button">Cancel</string>
    <string name="retry_button">Retry</string>
    <string name="leave_button">Leave</string>
    <string name="result_button">Result</string>
    <string name="done_button">Done</string>
    <string name="FlagPosition">Set Flag at Position</string>
    <string name="your_name">Your Name</string>
    <string name="map_point">map_point</string>
    <string name="help_button_description">Help</string>
    <string name="delete_string">Delete</string>
    <string name="flag_string">Flag</string>
    <string name="ok_string">Okay</string>
    <string name="cancel_string">Cancel</string>
    <string name="select_challenge">Select Challenge</string>
    <string name="challenge_name">Challenge Name</string>
    <string name="challenge_description">Challenge Description</string>
    <string name="save_challenge">Save Challenge</string>
    <string name="save_challenge_hint">Save the challenge if you wish</string>
    <string name="long_press_to_remove">Long press to remove</string>
    <string name="clock">clock</string>
    <string name="clock_pointer">clock pointer</string>
    <string name="best_time">Best Time: --:--</string>
    <string name="highscore_icon">highscore_icon</string>
</resources>
