<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/default_margin">

    <EditText
        android:id="@+id/dialog_input"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/default_margin"
        android:autofillHints=""
        android:background="@drawable/rounded_input"
        android:drawableStart="@drawable/user_icon"
        android:drawablePadding="@dimen/small_margin"
        android:ems="12"
        android:hint="@string/your_name"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/text_select_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/select_player"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_input" />

    <Spinner
        android:id="@+id/dialog_spinner"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_select_player" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialog_positive_button"
        style="@style/PrimaryButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginBottom="8dp"
        android:text="@string/ok_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dialog_negative_button"
        app:layout_constraintTop_toBottomOf="@id/dialog_spinner"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialog_negative_button"
        style="@style/SecondaryButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/cancel_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dialog_positive_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
