<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/select_challenge"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/challengeRecyclerView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:background="@color/field_black"
        app:layout_constraintBottom_toTopOf="@id/dialogNegativeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialogTitle" />


    <Button
        android:id="@+id/dialogNegativeButton"
        style="@style/PrimaryButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:text="@string/cancel_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/dialogInfoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/long_press_to_remove"
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/challengeRecyclerView" />

</androidx.constraintlayout.widget.ConstraintLayout>
