<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.hsfl.leo_nelly.capturethecampus.MainViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GameFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.hsfl.leo_nelly.capturethecampus.MapView
                android:id="@+id/mapImageGame"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/map_image"
                android:src="@drawable/campus_map"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageViewPosition"
                android:layout_width="@dimen/image_view_small"
                android:layout_height="@dimen/image_view_small"
                android:src="@drawable/red_dot"
                android:background="@color/transparent"
                app:layout_constraintBottom_toBottomOf="@id/mapImageGame"
                app:layout_constraintEnd_toEndOf="@id/mapImageGame"
                app:layout_constraintStart_toStartOf="@id/mapImageGame"
                app:layout_constraintTop_toTopOf="@id/mapImageGame"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintVertical_bias="0.5"
                android:contentDescription="@string/map_point"/>

            <TextView
                android:id="@+id/timerGame"
                style="@style/HeadlineStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:formattedTime="@{viewmodel.elapsedTime}"
                app:layout_constraintBottom_toTopOf="@+id/leaveButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mapImageGame" />

            <TextView
                android:id="@+id/visitedFlagsTextView"
                style="@style/HeadlineStyle"
                android:textSize="36sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewmodel.visitedFlagsCount}"
                app:drawableRightCompat="@drawable/flag_icon_not_visited_white"
                android:drawablePadding="@dimen/small_margin"
                app:layout_constraintBottom_toTopOf="@+id/timerGame"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mapImageGame" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/leaveButton"
                style="@style/SecondaryButtonStyle"
                android:text="@string/leave_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="VisualLintButtonSize,TextContrastCheck" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>
